--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
   <title>Sign In</title>
 </head>
 <body>
-  
+  <div id="wrapper">
+    <div id="left">
+      <div id="sign_in">
+        <div class="logo">
+          <img src="logo.png" alt="logo">
+        </div>
+        <form>
+          <div>
+            <label>Email or Username</label>
+            <input type="text" class="input_text">
+          </div>
+          <div>
+            <label>Password</label>
+            <input type="password" class="input_text">
+          </div>
+        </form>
+      </div>
+    </div>
+    <div id="right">
+
+    </div>
+  </div>
 </body>
 </html>
