Add buttons, forgot password links, and footer

--- a/index.html
+++ b/index.html
@@ -23,8 +23,23 @@
             <label>Password</label>
             <input type="password" class="input_text">
           </div>
+          <button type="submit" class="btn">Sign In</button>
         </form>
+        <div class="links">
+          <a href="#">Forgot Password?</a>
+          <a href="#">Sign in with company or school</a>
+        </div>
+        <div class="line">
+          <hr class="bar">
+        </div>
+        <a href="#" class="btn_secondary">Create an account</a>
       </div>
+      <footer id="footer">
+        <p>Copyright &copy; 2022, PracticeSight All Rights Reserved</p>
+        <div>
+          <a href="#">Terms of Use</a> | <a href="#">Privacy Policy</a>
+        </div>
+      </footer>
     </div>
     <div id="right">
 
