Create the right side of the wrapper

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css" class="rel">
-  <title>Sign In</title>
+  <title>Sign In | PracticeSight</title>
 </head>
 <body>
   <div id="wrapper">
@@ -42,7 +42,12 @@
       </footer>
     </div>
     <div id="right">
-
+      <div id="hero">
+        <div class="hero_content">
+          <h1 class="hero-text">PracticeSight</h1>
+          <a href="#" class="btn_secondary">Try for free</a>
+        </div>
+      </div>
     </div>
   </div>
 </body>
