Style the hero element, hero text, and hero blurb

--- a/index.html
+++ b/index.html
@@ -44,8 +44,13 @@
     <div id="right">
       <div id="hero">
         <div class="hero_content">
-          <h1 class="hero-text">PracticeSight</h1>
-          <a href="#" class="btn_secondary">Try for free</a>
+          <div class="blurb_wrapper">
+            <h2 class="blurb">Another CTA</h2>
+          </div>
+          <div class="hero_text_wrapper">
+            <h1 class="hero_text">Inspirational text that makes you act NOW</h1>
+            <a href="#" class="btn_secondary">Try for free</a>
+          </div>
         </div>
       </div>
     </div>
